2020-05-07  Segher Boessenkool  <segher@kernel.crashing.org>

	* gcc.target/powerpc/setbc.h: New.
	* gcc.target/powerpc/setbceq.c: New.
	* gcc.target/powerpc/setbcge.c: New.
	* gcc.target/powerpc/setbcgt.c: New.
	* gcc.target/powerpc/setbcle.c: New.
	* gcc.target/powerpc/setbclt.c: New.
	* gcc.target/powerpc/setbcne.c: New.

2020-05-07  Iain Sandoe  <iain@sandoe.co.uk>

	PR c++/94817
	PR c++/94829
	* g++.dg/coroutines/coro-missing-final-suspend.C: New test.
	* g++.dg/coroutines/coro-missing-initial-suspend.C: New test.
	* g++.dg/coroutines/coro-missing-promise-yield.C: Check for
	continuation of compilation.
	* g++.dg/coroutines/coro-missing-promise.C: Likewise.
	* g++.dg/coroutines/coro-missing-ret-value.C: Likewise
	* g++.dg/coroutines/coro-missing-ret-void.C: Likewise
	* g++.dg/coroutines/coro-missing-ueh-3.C: Likewise
	* g++.dg/coroutines/pr94817.C: New test.
	* g++.dg/coroutines/pr94829.C: New test.

2020-05-07  Marek Polacek  <polacek@redhat.com>

	PR c++/94590 - Detect long double -> double narrowing.
	* g++.dg/cpp0x/Wnarrowing18.C: New test.

2020-05-07  Marek Polacek  <polacek@redhat.com>

	PR c++/94255
	* g++.dg/template/spec41.C: New test.

2020-05-07  Marek Polacek  <polacek@redhat.com>

	P1957R2
	* g++.dg/cpp0x/initlist92.C: Don't expect an error in C++20 only.

2020-05-07  Manfred Schwarb <manfred99@gmx.ch>

	* gcc.dg/20050121-1.c: Fix broken dg directives.
	* gcc.dg/analzyer/pr93382.c: Likewise.
	* gcc.dg/autopar/pr68460.c: Likewise.
	* gcc.dg/c90-fordecl-1.c: Likewise.
	* gcc.dg/cpp/trad/funlike-5.c: Likewise.
	* gcc.dg/debug/dwarf2/dwarf-dfp.c: Likewise.
	* gcc.dg/debug/dwarf2/dwarf-float.c: Likewise.
	* gcc.dg/lto/pr52634_0.c: Likewise.
	* gcc.dg/pr32069.c: Likewise.
	* gcc.dg/pr35445.c: Likewise.
	* gcc.dg/pr40172-3.c: Likewise.
	* gcc.dg/pr87347.c: Likewise.
	* gcc.dg/pr88660.c: Likewise.
	* gcc.dg/pr89689.c: Likewise.
	* gcc.dg/sinatan-2.c: Likewise.
	* gcc.dg/sinhatanh-1.c: Likewise.
	* gcc.dg/sinhovercosh-1.c: Likewise.